# CS205-course-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  index.html  main.cpp
demo/: simple_ann.cpp  simple_ann.h  simple_cnn.cpp  simple_cnn.h
docs/html/: annotated.html  class_eigen_pair-members.html  class_eigen_pair.html  class_matrix-members.html  class_matrix.html  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_247c9eba0c420962286e8bd2a154537b.html  dir_2942f868a03c41b22a536fdc77b965b5.html  dir_3f8d3c41fd3fccd2cbc5073a2a2a24b7.html  dir_457b20429337cba690a821f8406df4b1.html  dir_5815af820a9cc9481f1d0990a0d60286.html  dir_67171158b0cb4db3d08bf5f3dfe8daba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e1ecdbac78f5041bd527fb40a7fd21eb.html  doxygen_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  (+27 more)
gtest/: basicTest.cpp  matrixViewTest.cpp  operatorTest.cpp  smartArrayTest.cpp  statisticTest.cpp
includes/: matrix.h  matrix_implementation.h  matrix_template.h
src/: _utility.cpp  _utility.h  exception.h  matrix.h  matrix_decl.h  matrix_impl.h  matrix_implementation.h  matrix_temp.h  matrix_template.h  matrix_view.h  matrix_view_decl.h  matrix_view_impl.h  matrix_view_temp.h  smart_array.h  smart_array_decl.h  smart_array_impl.h  smart_array_temp.h  utility_decl.h  utility_impl.h
support/: doxygen.h
test/: preset.h  test_assert.h  test_file_0.cpp  test_file_1.cpp  test_file_2.cpp  test_header.h  test_main.cpp
(+60 files in other folders)
